--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,13 @@
-body {
-  background-color: lightblue;
-  font-family: Arial, Helvetica, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer components {
+  .mio-pulsante {
+    @apply rounded-md hover:bg-sky-800 hover:text-white bg-green-300 py-2 px-4;
+  }
 }
+
 h1 {
   text-align: center;
 }
@@ -21,7 +27,4 @@ input {
 .filters-container {
   margin-top: 1rem;
   margin-bottom: 1rem;
-}
-.completed {
-  background-color: lightcoral;
 }
