--- a/src/index.css
+++ b/src/index.css
@@ -3,28 +3,13 @@
 @tailwind utilities;
 
 @layer components {
+  /* se vogliamo creare una classe CSS che comprende una serie di utility Tailwind possiamo utilizzare la direttiva @apply */
   .mio-pulsante {
     @apply rounded-md hover:bg-sky-800 hover:text-white bg-green-300 py-2 px-4;
   }
 }
 
-h1 {
-  text-align: center;
-}
-.task-app {
-  background-color: white;
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 1rem;
-}
-input {
-  padding: 0.5rem;
-}
 .btn {
   background-color: lightblue;
   padding: 0.5rem 1rem;
-}
-.filters-container {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
